# barcode-scanner-vue-tauri

./: .env  .env.local-sample  .gitignore  README.md  build.sh  components.d.ts  db.sqlite  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  todo.md  tsconfig.json  upload.sh  vite.config.ts
.github/workflows/: build.yml
backend-py/: config.py  database.py  errors.py  index.py  process_barcode.rs  send_barcode.py  sentry-py.md  sqlite.py  sync.py  watcher.py
backend-py/models/: ausnahmen.py  base.py  einstellungen.py  history.py  leitcodes.py  users.py
backend-py/req/: check_duplicate_barcode.py  get_ausnahmen.py  get_leitcodes.py  get_settings.py  get_users.py  post_barcode.py
backend-rust/: .gitignore  Cargo.toml
backend-rust/config/src/: lib.rs
backend-rust/fun/: Cargo.toml  errors.rs  lib.rs  looper.rs  process_barcode.rs  send_barcode.rs  sync.rs  update.rs  username_camelcase.rs
backend-rust/gui/: Cargo.toml  device_choice.rs  favicon.rs  get_hwnd_barcode_scanner.rs  group0.rs  group1.rs  group2.rs  group3.rs  hide_console_windows.rs  logo.rs  logo_and_version.rs  main.rs  win.rs
backend-rust/req/: Cargo.toml  check_duplicate_barcode.rs  get_ausnahmen.rs  get_leitcodes.rs  get_settings.rs  lib.rs  loginfn.rs  write_barcode.rs
backend-rust/scanner/: Cargo.toml  devices.rs  keyboard.rs  manager.rs  rawinput.rs
backend-rust/sqlite/: Cargo.toml
backend-rust/sqlite/migrations/2023-06-06-210811_history/: down.sql  up.sql
backend-rust/sqlite/migrations/2023-09-03-120127_history_synced_user_id/: up.sql
backend-rust/sqlite/migrations/2023-09-07-193831_offline_bc/: up.sql
backend-rust/sqlite/src/: lib.rs  models.rs  schema.rs
deploy-scripts/: build.sh  upload.sh  utils.sh
metabase_sqls/: arbeitszeiten.sql  arbeitszeitenMinusPause.sql  lager_barcodes.sql  produktion_barcodes.sql
scripts/: build.sh  deploy.sh
src/: global.d.ts  main.ts
src-tauri/: .env  Cargo.toml  db.sqlite  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/config/: Cargo.toml  lib.rs
src-tauri/src/config/src/: lib.rs
src-tauri/src/req/: Cargo.toml  check_duplicate_barcode.rs  get_ausnahmen.rs  get_lager_users.rs  get_leitcodes.rs  get_settings.rs  get_users.rs  lib.rs  loginfn.rs  write_barcode.rs
src-tauri/src/scanner/: event.rs  lib.rs  pipe.rs  registrar.rs
src-tauri/src/sqlite/: Cargo.toml
src-tauri/src/sqlite/migrations/2023-09-03-213752_users/: up.sql
src-tauri/src/sqlite/migrations/2023-09-04-195910_settings/: up.sql
src-tauri/src/sqlite/migrations/2023-09-06-181331_ausnahmen/: up.sql
src-tauri/src/sqlite/migrations/2023-09-06-195437_leitcodes/: up.sql
src-tauri/src/sqlite/migrations/2023-09-08-181754_lager_user_ids_bc/: up.sql
src-tauri/src/sqlite/migrations/2025-19-03-205300_leitcodes_produktion/: down.sql  up.sql
src-tauri/src/sqlite/migrations/2025-25-04-160700_users/: up.sql
src-tauri/src/sqlite/migrations/2025-25-04-195437_weg/: up.sql
src-tauri/src/sqlite/src/: errors.rs  lib.rs  models.rs  process_barcode.rs  schema.rs  send_barcode.rs
src/assets/layout/: _main.scss  _menu.scss  _responsive.scss
src/components/: BarcodeInput.vue  FloatingConfigurator.vue  HinweisComponent.vue  HinweisVorlagenComponent.vue  HistoryComponent.vue
src/composables/: config.ts  helpers.ts  myFetch.ts  useApi.ts
src/interfaces/: index.ts
src/layout/: AppConfigurator.vue  AppFooter.vue  AppLayout.vue  AppMenu.vue  AppMenuItem.vue  AppTopbar.vue
src/layout/composables/: layout.ts
src/router/: index.ts
src/stores/: appStore.ts  arbeitsZeitStore.ts  authStore.ts  barcodeStore.ts  configStore.ts  hinweisStore.ts  hinweisVorlageStore.ts  hinweise.ts  hinweise.ts.md  historyStore.ts  localStore.ts  syncStore.ts  teamStore.ts
src/utils/: config.ts  fetchWithAuth.ts  toastUtils.ts
src/views/pages/: AnleitungPage.vue  Home.vue  HomePage.vue  Login.vue  LoginPage.vue  NotFoundPage.vue  Team.vue  TeamPage.vue
