[package]
name = "barcode-scanner-v2"
version = "2.0.8"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "barcode_scanner_vue_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
notify-rust = "4.11.7"
self_update = { version = "0.42.0", features = ["archive-zip", "compression-flate2", "compression-zip-deflate"] }
tauri = { version = "2.5.1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
multiinput = { git = "https://github.com/Jonesey13/multiinput-rust" }
winapi = { version = "0.3", features = ["commctrl", "wincon", "winuser", "basetsd", "hidpi", "winnt", "libloaderapi", "fileapi", "hidsdi", "handleapi"] }
tauri-plugin-dialog = "2"
sqlite = { path = "./src/sqlite" }
req = { path = "./src/req" }
native-dialog = { version = "0.9.0" }
tauri-plugin-os = "2"
config = { path = "./src/config" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
