[package]
name = "scanner"
version = "1.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# fltk = { version = "1.3.16", features = ["fltk-bundled"] }
# fltk-theme = "0.6.0"
# notify-rust = "4.5.10"
# reqwest = { version = "0.11", features = ["json"] }
# tokio = { version = "1", features = ["full"] }
# serde_json = "1.0.64"
# serde = { version = "1.0.125", features = ["derive"] }
# serde_yaml = "0.9.13"
# self_update = { version = "0.32.0", features = ["archive-zip", "compression-flate2", "compression-zip-deflate"] }
# fltk-grid = "0.1.4" 

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winuser", "basetsd", "hidpi", "winnt", "libloaderapi", "fileapi", "hidsdi", "handleapi"] }


[lib]
name = "scanner"
path = "lib.rs"
