[package]
name = "sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel =         { version = "2.1.0", default-features = false, features = ["sqlite"] }
diesel_migrations = "2.1.0"
req = { path = "../req" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

[dependencies.rusqlite]
version = "0.29.0"
features = ["bundled"]