[package]
name = "req"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.2", features = ["full"] }
serde_json = "1.0.64"
serde = { version = "1.0.125", features = ["derive"] }
serde_yaml = "0.9.33"
config = { path = "../config" }

[lib]
name = "req"
path = "lib.rs"
