[package]
name = "sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel =         { version = "2.2.9", default-features = false, features = ["sqlite"] }
diesel_migrations = { version = "2.2.0", features = [] }
req = { path = "../req" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tauri = { version = "2", features = [] }
chrono = "0.4.40"

[dependencies.rusqlite]
version = "0.33.0"
features = ["bundled"]